k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rudii
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      namespace: rudii
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgresdb
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: rudii
  name: postgresdb
  labels:
    app: postgresdb
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgresdb
