k8s/apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  namespace: rudii
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      namespace: rudii
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: surmannr/msc_ocelotapigateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: rudii
  name: apigateway-service
spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: rudii
spec:
  rules:
    - host: "parcel-delivery-api.k8s.arcter" ## set the domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
