k8s/customer-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customeridentity-deployment
  namespace: rudii
  labels:
    app: customeridentityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customeridentityapi
  template:
    metadata:
      namespace: rudii
      labels:
        app: customeridentityapi
    spec:
      containers:
        - name: customeridentityapi
          image: surmannr/msc_customerserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: rudii
  name: customeridentityapi-service
spec:
  type: NodePort
  selector:
    app: customeridentityapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customeridentityapi-ingress
  namespace: rudii
spec:
  rules:
    - host: "customer-server.k8s.arcter" ## set the domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customeridentityapi-service
                port:
                  number: 80
