k8s/employee-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeidentity-deployment
  namespace: rudii
  labels:
    app: employeeidentityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeeidentityapi
  template:
    metadata:
      namespace: rudii
      labels:
        app: employeeidentityapi
    spec:
      containers:
        - name: employeeidentityapi
          image: surmannr/msc_employeeserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: rudii
  name: employeeidentityapi-service
spec:
  type: NodePort
  selector:
    app: employeeidentityapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employeeidentityapi-ingress
  namespace: rudii
spec:
  rules:
    - host: "employee-server.k8s.arcter" ## set the domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employeeidentityapi-service
                port:
                  number: 80
