k8s/package-sending.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packagesending-deployment
  namespace: rudii
  labels:
    app: packagesendingapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packagesendingapi
  template:
    metadata:
      namespace: rudii
      labels:
        app: packagesendingapi
    spec:
      containers:
        - name: packagesendingapi
          image: surmannr/msc_packagesending:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: rudii
  name: packagesendingapi-service
spec:
  type: NodePort
  selector:
    app: packagesendingapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: packagesendingapi-ingress
  namespace: rudii
spec:
  rules:
    - host: "packagesending.k8s.arcter" ## set the domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: packagesendingapi-service
                port:
                  number: 80
